Objective1/2. phpapache-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpapache-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: hpa.netdev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-apache
                port:
                  number: 80
